# src/Routes/pdf.route.js
@@ -1,9 +1,9 @@
 const createPDF  = require('../controllers/Pdf.controller');
 
 const router = require('express').Router();
-router.get('/createpdf', createPDF.PDF_Creation)
-router.get('/pdfformat', createPDF.PDF_Creation_EJS_format)
-router.get('/mailpdfformat', createPDF.PDF_Mail)
+router.get('/create', createPDF.PDF_Creation)
+router.get('/ejsformat', createPDF.PDF_Creation_EJS_format)
+router.get('/mailpdf', createPDF.PDF_Mail)
 
 
 module.exports = router;
